--- a/db/configurations/getinvolved/templates/search-volopps.hbs
+++ b/db/configurations/getinvolved/templates/search-volopps.hbs
@@ -1,1 +1,1 @@
-<script src="https://milo.scvo.org/opportunities.bundle.js" data-widget-style="basic" data-hide-title="false" data-hide-map="false"></script>
+<script src="https://milo.scvo.org/opportunities.bundle.js" data-widget-style="basic" data-hide-title="true" data-hide-map="false"></script>
