--- a/db/configurations/getinvolved/templates/head-tags.hbs
+++ b/db/configurations/getinvolved/templates/head-tags.hbs
@@ -1,2 +1,2 @@
-<title>Get Involved!</title>
-<meta property="og:title" content="Get Involved!" data-dynamic="true">
+<title>{{route.metaData.title}}</title>
+<meta property="og:title" content="{{route.metaData.title}}" data-dynamic="true">
