--- a/db/configurations/getinvolved/templates/about.hbs
+++ b/db/configurations/getinvolved/templates/about.hbs
@@ -1,6 +1,8 @@
 <h2>About Get Involved!</h2>
 
-<p>Get Involved is powered by a collaboration of infrastructure organisations across Scotland. It is only with the dedication of staff and volunteers from SCVO and the 32 local Third Sector Interfaces that the quality information here is available.</p>
+<p>
+  Get Involved is powered by a collaboration of infrastructure organisations across Scotland. It is only with the dedication of staff and volunteers from SCVO and the 32 local Third Sector Interfaces that the quality information here is available.
+</p>
 
 <hr>
 
