--- a/db/configurations/getinvolved/templates/privacy.hbs
+++ b/db/configurations/getinvolved/templates/privacy.hbs
@@ -7,7 +7,7 @@
 
       <p>The website, <a href="/">getinvolved.scot</a> (the "<strong>Site</strong>”) is operated by or on behalf of the Scottish Council for Voluntary Organisations ("<strong>SCVO</strong>"). We are committed to protecting and respecting your privacy.</p>
 
-      <p>This privacy policy (the "<strong>Policy</strong>") (together with the website <a href="/terms-and-conditions">terms and conditions</a> (the "<strong>Terms</strong>") and any other documents referred to within the Terms) sets out the basis on which any personal data we collect from you, or that you provide to us, will be processed by us. Please read the following carefully to understand our views and practices regarding your personal data and how we will treat it.</p>
+      <p>This privacy policy (the "<strong>Policy</strong>") (together with the website <a href="/terms">terms and conditions</a> (the "<strong>Terms</strong>") and any other documents referred to within the Terms) sets out the basis on which any personal data we collect from you, or that you provide to us, will be processed by us. Please read the following carefully to understand our views and practices regarding your personal data and how we will treat it.</p>
 
       <p>For the purpose of the Data Protection Act 1998 (the “<strong>Act</strong>"), the data controller is the Scottish Council for Voluntary Organisations of Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh, EH3 6BB.</p>
 
