--- a/assets/css/getinvolved-styles.scss
+++ b/assets/css/getinvolved-styles.scss
@@ -177,9 +177,9 @@ a:hover {
       .mdc-tab {
         min-width: 0;
         font-size: 1rem;
-        padding: 0.5rem 0;
+        padding: $unit/2 0;
         text-transform: none;
-        margin: 0 .75rem;
+        margin: 0 $unit*(3/4);
         display: inline-block;
       }
       .mdc-tab--active,
@@ -196,7 +196,7 @@ a:hover {
   border-color: #337ab7;
   color: white !important;
   text-transform: none;
-  line-height: 1.75rem;
+  line-height: $unit*1.75;
   font-size: 0.9rem !important;
   text-align: center;
   display: block;
@@ -230,6 +230,7 @@ hr {
   background-color: $mdc-theme-primary;
   height: $unit/5;
   border: none;
+  margin: $unit 0;
 }
 p, li, div {
   font-weight: 400;
@@ -244,12 +245,12 @@ p.quote {
 }
 
 footer {
-  --mdc-layout-grid-margin-desktop: 1rem;
-  --mdc-layout-grid-gutter-desktop: 1rem;
-  --mdc-layout-grid-margin-tablet: 1rem;
-  --mdc-layout-grid-gutter-tablet: 1rem;
-  --mdc-layout-grid-margin-phone: 1rem;
-  --mdc-layout-grid-gutter-phone: 1rem;
+  --mdc-layout-grid-margin-desktop: $unit;
+  --mdc-layout-grid-gutter-desktop: $unit;
+  --mdc-layout-grid-margin-tablet: $unit;
+  --mdc-layout-grid-gutter-tablet: $unit;
+  --mdc-layout-grid-margin-phone: $unit;
+  --mdc-layout-grid-gutter-phone: $unit;
   color: white;
   background-color: $mdc-theme-footer;
   p, li, div {
@@ -330,7 +331,7 @@ footer {
     text-decoration: underline !important;
   }
   .brand-logo {
-    margin-top: 1.5rem;
+    margin-top: $unit*1.5;
     display: inline-block;
     // text-align: right;
     img {
@@ -348,7 +349,6 @@ footer {
   .fa-ul li,
   .mdc-list-item {
     color: white;
-    // font-size: 1rem;
   }
   .fa-ul {
     margin: 0 0 0 $unit*2;
@@ -377,14 +377,8 @@ footer {
   .logo.scvo {
     position: absolute;
     height: 45px;
-    bottom: .85rem;
-    right: 0.75rem;
-  }
-  .logo.digital-scotland {
-    height: 50px;
-    position: absolute;
-    bottom: 0.7rem;
-    right: 160px;
+    bottom: $unit*.85rem;
+    right: $unit*.75rem;
   }
   .menu ul {
     margin-top: 0;
@@ -426,7 +420,7 @@ footer {
   }
   .pagination {
     padding: 0 !important;
-    margin: 1rem 0 0;
+    margin: $unit 0 0;
   }
   .pagination-distance-9,
   .pagination-distance-8,
