--- a/assets/css/getinvolved-styles.scss
+++ b/assets/css/getinvolved-styles.scss
@@ -377,8 +377,8 @@ footer {
   .logo.scvo {
     position: absolute;
     height: 45px;
-    bottom: $unit*.85rem;
-    right: $unit*.75rem;
+    bottom: $unit*.85;
+    right: $unit*.75;
   }
   .menu ul {
     margin-top: 0;
