--- a/db/configurations/getinvolved/layouts/default.hbs
+++ b/db/configurations/getinvolved/layouts/default.hbs
@@ -56,6 +56,9 @@
                   <img src="/assets/images/get-involved-logo.png" class="brand-logo-desktop" />
                 </a>
               </span>
+              <button id="menu_button" class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="window.drawer.open = true">
+                <span class="far fa-2x fa-bars" aria-hidden="true"></span>
+              </button>
             </section>
           </div>
         </div>
@@ -67,9 +70,6 @@
                 <a class="mdc-tab{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{path}}"><span class="mdc-tab--label">{{{label}}}</span></a>
                 {{/each}}
               </nav>
-              <button id="menu_button" class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="window.drawer.open = true">
-                <span class="far fa-2x fa-bars" aria-hidden="true"></span>
-              </button>
             </section>
           </div>
         </div>
@@ -85,6 +85,11 @@
           <nav class="mdc-temporary-drawer__content mdc-list-group">
             <div id="icon-with-text-demo" class="mdc-list" [menu]="'main'" [menulinkselector]="''" [menulabelselector]="'span.menu-label'" [menuactiveclass]="'active'">
               {{#each context.menus.main}}
+              <a class="mdc-list-item{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{path}}" data-mdc-tabindex-handled="true" tabindex="-" onclick="window.drawer.open = false">
+                <span class="menu-label">{{{label}}}</span>
+              </a>
+              {{/each}}
+              {{#each context.menus.footer}}
               <a class="mdc-list-item{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{path}}" data-mdc-tabindex-handled="true" tabindex="-" onclick="window.drawer.open = false">
                 <span class="menu-label">{{{label}}}</span>
               </a>
