--- a/assets/css/humanrightsdeclaration-styles.scss
+++ b/assets/css/humanrightsdeclaration-styles.scss
@@ -156,6 +156,7 @@ a {
   }
   .mdc-tab-bar {
     margin: 0;
+    padding-top: $unit;
     .mdc-tab:first-child {
       padding-left: 0;
     }
@@ -165,6 +166,7 @@ a {
       padding: $unit;
       text-transform: none;
       .mdc-tab--label {
+        text-transform: uppercase;
         padding-bottom: $unit/2;
         display: block;
         border-bottom: 3px solid white;
