--- a/assets/css/scotlandforeurope-styles.scss
+++ b/assets/css/scotlandforeurope-styles.scss
@@ -108,7 +108,19 @@ main {
 }
 a {
   text-decoration-skip: ink;
+  text-decoration: none;
+  font-weight: 600;
 }
+a:hover {
+  text-decoration: underline;
+}
+// iframe {
+//   border: none;
+//   background-image: url('/assets/images/spinner2.gif');
+//   background-repeat: no-repeat;
+//   background-position: center center;
+// }
+
 ::-moz-selection {
   color: white;
   background: $mdc-theme-secondary;
