--- a/assets/css/humanrightsdeclaration-styles.scss
+++ b/assets/css/humanrightsdeclaration-styles.scss
@@ -375,12 +375,13 @@ p.quote {
     padding-left: $unit*2;
     p {
       padding: 1rem 1rem 0.25rem;
-      background: white;
+      background: transparent;
       text-align: center;
       border: 0px solid $mdc-theme-secondary;
     }
     img {
       margin: 0;
+      mix-blend-mode: multiply;
     }
   }
   .signatory-detail {
