Logo position improvements

--- a/assets/css/digitalparticipation-styles.scss
+++ b/assets/css/digitalparticipation-styles.scss
@@ -1162,13 +1162,13 @@ footer {
     position: absolute;
     height: 45px;
     bottom: 0.7rem;
-    right: 0.75rem;
+    right: 0;
   }
   .logo.digital-scotland {
     height: 50px;
     position: absolute;
     bottom: 0.7rem;
-    right: 180px;
+    right: 170px;
   }
   .menu ul {
     margin-top: 0;
