--- a/assets/css/getinvolved-styles.scss
+++ b/assets/css/getinvolved-styles.scss
@@ -381,7 +381,7 @@ footer {
     position: absolute;
     height: 45px;
     bottom: $unit*.85;
-    right: $unit*.75;
+    right: 0;
   }
   .menu ul {
     margin-top: 0;
