--- a/assets/css/scotlandforeurope-styles.scss
+++ b/assets/css/scotlandforeurope-styles.scss
@@ -645,7 +645,7 @@ footer {
     position: absolute;
     height: 45px;
     bottom: 1.2rem;
-    right: 0.75rem;
+    right: 0;
   }
   .menu ul {
     margin-top: 0;
