--- a/db/configurations/getinvolved/layouts/default.hbs
+++ b/db/configurations/getinvolved/layouts/default.hbs
@@ -84,12 +84,7 @@
           </header>
           <nav class="mdc-temporary-drawer__content mdc-list-group">
             <div id="icon-with-text-demo" class="mdc-list" [menu]="'main'" [menulinkselector]="''" [menulabelselector]="'span.menu-label'" [menuactiveclass]="'active'">
-              {{#each context.menus.main}}
-              <a class="mdc-list-item{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{path}}" data-mdc-tabindex-handled="true" tabindex="-" onclick="window.drawer.open = false">
-                <span class="menu-label">{{{label}}}</span>
-              </a>
-              {{/each}}
-              {{#each context.menus.footer}}
+              {{#each context.menus.mobile}}
               <a class="mdc-list-item{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{path}}" data-mdc-tabindex-handled="true" tabindex="-" onclick="window.drawer.open = false">
                 <span class="menu-label">{{{label}}}</span>
               </a>
