--- a/db/configurations/getinvolved/layouts/default.hbs
+++ b/db/configurations/getinvolved/layouts/default.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <base href="/">
+  <base href="/{{#if request.params.path}}{{replace request.params.path '_' ''}}{{else}}{{/if}}">
   <!--{section:head}-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" sizes="57x57" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-57x57.png">
