--- a/db/configurations/humanrightsdeclaration/templates/head-tags.hbs
+++ b/db/configurations/humanrightsdeclaration/templates/head-tags.hbs
@@ -4,8 +4,8 @@
 <title>The Scotland Declaration on Human Rights signatory: {{{title}}}</title>
 <meta property="og:title" content="The Scotland Declaration on Human Rights signatory: {{{title}}}" data-dynamic="true">
 {{else}}
-<title>The Scotland Declaration on Human Rights</title>
-<meta property="og:title" content="The Scotland Declaration on Human Rights" data-dynamic="true">
+<title>{{route.metaData.title}}</title>
+<meta property="og:title" content="{{route.metaData.title}}" data-dynamic="true">
 {{/if ~}}
 {{#if files.0.uploadUrl ~}}
 <meta property="og:image" content="{{files.0.uploadUrl}}" data-dynamic="true">
@@ -23,6 +23,5 @@
 {{/if ~}}
 {{/with ~}}
 {{else}}
-<title>The Scotland Declaration on Human Rights</title>
-<meta property="og:title" content="The Scotland Declaration on Human Rights" data-dynamic="true">
-{{/if ~}}
+<title>{{route.metaData.title}}</title>
+<meta property="og:title" content="{{route.metaData.title}}" data-dynamic="true">{{/if ~}}
