--- a/db/configurations/scotlandforeurope/templates/head-tags.hbs
+++ b/db/configurations/scotlandforeurope/templates/head-tags.hbs
@@ -1,3 +1,7 @@
+{{#compare request.params.path "===" "signatories" ~}}
+<title>{{route.metaData.title}}</title>
+<meta property="og:title" content="{{route.metaData.title}}" data-dynamic="true">
+{{else}}
 {{#if data.primaryResponse.hits.hits.[0] ~}}
 {{#with data.primaryResponse.hits.hits.[0]._source ~}}
 {{#if title ~}}
@@ -26,3 +30,4 @@
 <title>{{route.metaData.title}}</title>
 <meta property="og:title" content="{{route.metaData.title}}" data-dynamic="true">
 {{/if ~}}
+{{/compare ~}}
