--- a/db/configurations/scvo/templates/pages/page-head-tags.hbs
+++ b/db/configurations/scvo/templates/pages/page-head-tags.hbs
@@ -1,8 +1,8 @@
 {{#if data.primaryResponse.hits.hits.[0] ~}}
 {{#with data.primaryResponse.hits.hits.[0]._source ~}}
 {{#ifAny title og_title ~}}
-<title>SCVO – {{{default title og_title}}}</title>
-<meta property="og:title" content="SCVO – {{{default title og_title}}}" data-dynamic="true">
+<title>{{{default title og_title}}} – SCVO</title>
+<meta property="og:title" content="{{{default title og_title}}} – SCVO" data-dynamic="true">
 {{else}}
 <title>SCVO – Scottish Council for Voluntary Organisations</title>
 <meta property="og:title" content="SCVO – Scottish Council for Voluntary Organisations" data-dynamic="true">
